# nml

./: CMakeLists.txt  README.md
etc/: README.md
etc/doc/: definition.md  example.nml
etc/scripts/: colors.sh  configure.sh
lib/: CMakeLists.txt
lib/nml/: CMakeLists.txt
lib/nml/include/: nml.h  nmlobject.h  nmlprop.h  nmlvar.h  nmlvarstd.h
lib/nml/src/: nml.cpp
lib/nml/test/: test_nml.cpp
